--- a/ui.frontend/src/main/webpack/site/main.scss
+++ b/ui.frontend/src/main/webpack/site/main.scss
@@ -7,6 +7,7 @@
 @import './elements.scss';
 
 /* Components */
+@import '../components/ac-overlay/scss/ac-overlay.scss';
 @import '../components/accordion/scss/accordion.scss';
 @import '../components/breadcrumb/scss/breadcrumb.scss';
 @import '../components/byline/scss/byline.scss';
