Added delta offer component

--- a/ui.frontend/src/main/webpack/site/main.scss
+++ b/ui.frontend/src/main/webpack/site/main.scss
@@ -14,6 +14,7 @@
 @import '../components/button/scss/button.scss';
 @import '../components/carousel/scss/carousel.scss';
 @import '../components/contentfragment/scss/contentfragment.scss';
+@import '../components/delta-offer/scss/delta-offer.scss';
 @import '../components/download/scss/download.scss';
 @import '../components/experiencefragment/scss/experiencefragment.scss';
 @import '../components/image/scss/image.scss';
